[gd_scene load_steps=4 format=3 uid="uid://8uctsbr3saf8"]

[ext_resource type="Theme" uid="uid://dsq43g3iah0so" path="res://theme.tres" id="1_5qpyf"]
[ext_resource type="Script" path="res://scripts/menus/main_menu.gd" id="1_p63o0"]
[ext_resource type="Texture2D" uid="uid://cfaylr372rqml" path="res://sprites/fighting/fightingbackground.png" id="3_ea57f"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -2.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_5qpyf")
script = ExtResource("1_p63o0")

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = -1
position = Vector2(256, 146)
texture = ExtResource("3_ea57f")

[node name="Start" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -76.0
offset_top = -23.5
offset_right = 76.0
offset_bottom = 23.5
grow_horizontal = 2
grow_vertical = 2
text = "Start"

[node name="FishKilled2" type="Label" parent="."]
layout_mode = 0
offset_left = 14.0
offset_top = 252.0
offset_right = 155.0
offset_bottom = 278.0
theme = ExtResource("1_5qpyf")
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Fish Killed:"

[node name="FishKilled" type="Label" parent="."]
layout_mode = 0
offset_left = 12.0
offset_top = 250.0
offset_right = 153.0
offset_bottom = 276.0
text = "Fish Killed:"

[node name="Label2" type="Label" parent="."]
layout_mode = 0
offset_left = 166.0
offset_top = 80.0
offset_right = 343.0
offset_bottom = 106.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "FIsh Fighter X"

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 164.0
offset_top = 78.0
offset_right = 341.0
offset_bottom = 104.0
text = "FIsh Fighter X"

[connection signal="pressed" from="Start" to="." method="_on_start_pressed"]
